// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordPane calls \`swap\` when checkbox is clicked 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  undefined,
  true,
]
`;

exports[`PasswordPane calls \`swap\` when password changes 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  "setPassword",
  "newPassword",
  "policy",
]
`;

exports[`PasswordPane disables input when submitting 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={true}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={false}
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane renders correct css className when \`hidden\` is true 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password auth0-lock-hidden"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={false}
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane renders correctly 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={false}
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane renders correctly when \`allowShowPassword\` is true 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={false}
    data-strengthMessages={Object {}}
    data-value="password"
  />
  <div
    className="auth0-lock-show-password"
  >
    <input
      id="slideOne"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor="slideOne"
      title="showPassword"
    />
  </div>
</div>
`;

exports[`PasswordPane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={true}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={false}
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane sets showPasswordStrengthMessage as false when \`isFieldValid\` is true 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={false}
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;

exports[`PasswordPane sets showPasswordStrengthMessage as true when \`isFieldValid\` is false 1`] = `
<div
  className="auth0-lock-input-block auth0-lock-input-show-password"
>
  <div
    data-__type="password_input"
    data-disabled={false}
    data-invalidHint="blankErrorHint"
    data-isValid={false}
    data-lock={Object {}}
    data-onChange={[Function]}
    data-placeholder="placeholder"
    data-policy="policy"
    data-showPassword="showPassword"
    data-showPasswordStrengthMessage={true}
    data-strengthMessages={Object {}}
    data-value="password"
  />
</div>
`;
